# rndcbi

./: .env.example  .gitignore  Cargo.toml  RESEARCHER_GUIDE.md
deploy/: centrabio-nexus.service  deploy.sh  nginx.conf  setup_db.sh
migrations/: 001_initial_schema.sql
src/: analysis.rs  auth.rs  config.rs  errors.rs  handlers.rs  main.rs  models.rs  qrcode.rs  reports.rs  services.rs
static/: index.html  login.html  manifest.json  offline.html  sw.js
